--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,9 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/Material-Icons.css",
+              "src/assets/Roboto.css"
             ],
             "scripts": [
               "src/assets/WeakSet.js"
