--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
+    "custom-event-polyfill": "^1.0.7",
     "darkreader": "^4.9.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
